# marco

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  flake.nix
.cargo/: config.toml
.github/: dependabot.yml  pull-request-template.md
.github/issues/: bug-report.md  config.yml  feature-request.md
.github/workflows/: core.yml  main-validation.yml  scheduled.yml  stale.yml
cli/: Cargo.toml
cli/src/: main.rs
server/: Cargo.toml
server/src/: lib.rs  logger.rs  main.rs  server.rs  settings.rs  tracer.rs
src/: cli.rs  logger.rs  main.rs  tracer.rs
web-runtime/: Cargo.toml  README.md
web-runtime/src/: lib.rs
web-runtime/static/: index.html
xtask/: Cargo.toml
xtask/src/: main.rs
