[package]
name = "backend-rust-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.11", features = ["ws"] }
cfg-if = "1.0.0"
clap = { version = "4.1.11", features = ["derive"] }
env_logger = "0.10.0"
hyper = { version = "0.14.25", features = ["full"] }
log = { version = "0.4.17", features = ["serde", "std"] }
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"] }

tracing = { version = "0.1.37", features = ["async-await"] }
tower = {version = "0.4.13", optional = true }
tower-http = {version = "0.4", optional = true }
axum-tracing-opentelemetry = { version = "0.10.0", features = [
  "otlp",
  "tracing_subscriber_ext",
],optional = true }
opentelemetry = { version = "0.18.0", features = [
  "rt-tokio",
  "metrics",
], optional = true }
tracing-opentelemetry = {version = "0.18.0", optional = true }

reqwest = "0.11.15"
tracing-subscriber = "0.3.16"
opentelemetry-otlp = { version = "0.11.0",features = [
  "grpc-tonic",
  "http-proto"
]} 


[features]
default = ["prod"]
debug = []
prod = ["trace"]
trace = ["dep:axum-tracing-opentelemetry", "dep:opentelemetry", "dep:tracing-opentelemetry", "dep:tower", "dep:tower-http"]
cache = []



