[package]
name = "cli"
version = "0.1.0"
edition = "2021"
description = "Marco Cli, used for create a new project build and develop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
server = { path = "../server", version = "0.1" }
clap = { version = "4.1.11", features = ["derive"] }
env_logger = "0.10.0"
log = { version = "0.4.17", features = ["serde", "std"] }
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.40"
reqwest = "0.11.15"
tokio = { version = "1.26.0", features = ["full"] }
cfg-if = "1.0.0"
